@startuml

title __UDPCHAT's Class Diagram__\n

  package Client {
    class Client {
    }
  }
  

  package Client {
    class ClientMain {
    }
  }
  

  package Client {
    class ClientWindow {
    }
  }
  

  package Client {
    class Login {
    }
  }
  

  package Server {
    class ServerClient {
    }
  }
  

  package Server {
    class ServerController {
    }
  }
  

  package Server {
    class ServerMain {
    }
  }
  

  package Server {
    class UniqueID {
    }
  }
  

  ClientMain -up-|> Application
  ClientWindow -up-|> Runnable
  ClientWindow -up-|> Initializable
  ClientWindow o-- Client : client
  ServerController -up-|> Runnable
  ServerController -up-|> Initializable
  ServerMain -up-|> Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
